Fix all the links and aligned to the center

--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,67 @@
 body{
   background: grey;
 }
+
+.links-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#btn-twitter{
+  background: #EAECF0;
+  text-decoration: none;
+  color: black;
+  padding: 1rem 20rem;
+  width: 20rem;
+  text-align: center;
+  margin-top: .5rem;
+}
+
+#btn-zuri{
+  background: #EAECF0;
+  text-decoration: none;
+  color: black;
+  padding: 1rem 20rem;
+  width: 20rem;
+  text-align: center;
+  margin-top: .5rem;
+}
+
+#books{
+  background: #EAECF0;
+  text-decoration: none;
+  color: black;
+  padding: 1rem 20rem;
+  width: 20rem;
+  text-align: center;
+  margin-top: .5rem;
+}
+
+#book__python{
+  background: #EAECF0;
+  text-decoration: none;
+  color: black;
+  padding: 1rem 20rem;
+  width: 20rem;
+  text-align: center;
+  margin-top: .5rem;
+}
+#pitch{
+  background: #EAECF0;
+  text-decoration: none;
+  color: black;
+  padding: 1rem 20rem;
+  width: 20rem;
+  text-align: center;
+  margin-top: .5rem;
+}
+#book__design{
+  background: #EAECF0;
+  text-decoration: none;
+  color: black;
+  padding: 1rem 20rem;
+  width: 20rem;
+  text-align: center;
+  margin-top: .5rem;
+}
